deployment/Infras/argo-cd/service-argo-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: argocd-server-service
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
