deployment/Infras/argo-cd/ingress-argo-cd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gitops.compaore.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          # Reference to a Service name, also specified in the Rollout spec.strategy.canary.stableService field
          service:
            name: argocd-server-service
            port:
              number: 443
